# Pybind11_Skillbox_10

./: README.md
Vector3D_pybind11/: CMakeLists.txt  setup.py
Vector3D_pybind11/include/: vector_operations.h
Vector3D_pybind11/src/: bindings.cpp  vector_operations.cpp
Vector3D_pybind11/tests/: test_vectors.py
